# faf-dns-bench

./: .gitignore  Cargo.toml  README.md
data/: top-1m.csv
src/: args.rs  const_sys.rs  data.rs  json_stats.rs  main.rs  net.rs  statics.rs  time.rs  util.rs
